# headless-game-engine-for-rl-training

./: .gitignore  CLAUDE.md  Cargo.toml  PRODUCT_SPEC.MD  README.md  TRAINING_LOG.md  WRITEUP.md  package.json
configs/: 1v1_deathmatch.json  1v1_dust2.json  1v1_dust2_open.json  1v1_open.json  arena_deathmatch.json  lane_lasthit.json  oval_race.json  tactical_dust2.json  tactical_obstacles.json  tactical_open.json
configs/cs_lite/: 1v1_tactical.json  1v1_wide.json  1v1_wide_eureka_winner.json  1v1_wide_selfplay.json  5v5_elimination.json  curriculum_wide.yaml  phase2_mild_death15.json  phase2_mild_dmg4.json  phase3_selfplay.json
configs/tactical/: curriculum.yaml  phase1_open.json  phase2_obstacles.json  phase3_complex.json
crates/engine/: Cargo.toml
crates/engine/examples/: benchmark.rs
crates/engine/src/: action_space.rs  builder.rs  candidates.rs  config.rs  error.rs  game_def.rs  lib.rs  navigation.rs  observation.rs  physics.rs  physics3d.rs  scenario.rs  scripted_ai.rs  sensors.rs  telemetry.rs  tick.rs  weapons.rs
crates/engine/src/actions/: mod.rs
crates/engine/src/converters/: dict.rs  flat.rs  mod.rs  spatial.rs
crates/engine/src/ecs/: components.rs  resources.rs  systems.rs
crates/engine/src/features/: mod.rs
crates/engine/src/features/extractors/: action_mask.rs  custom.rs  entity_list.rs  mod.rs  self_state.rs
crates/engine/src/replay/: mod.rs  writer.rs
crates/engine/src/rewards/: aim.rs  combat.rs  mod.rs  objective.rs  proximity.rs  time_penalty.rs
crates/engine/src/scenarios/: cs_lite.rs  cs_lite_bridge.rs  cs_lite_dummy_ai.rs  moba_lane.rs  mod.rs  racing.rs  tactical_deathmatch.rs
crates/engine/src/strategy/: bridge.rs  mod.rs  provider.rs  types.rs
crates/engine/src/strategy/providers/: channel.rs  mod.rs  rules.rs
crates/engine/tests/: cs_lite.rs  integration.rs  racing.rs  tactical.rs
crates/py/: Cargo.toml  pyproject.toml
crates/py/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  main.rs  session_registry.rs  state.rs  tick_loop.rs  ws.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: buffer_sink.rs  file_sink.rs  lib.rs  ws_sink.rs
docs/: DIRECTION.md  GAME_BRIDGE.md  RACING_GAMEPAD_PLAN.md  RACING_RL_SPEC.md  SESSION_REPORT - 6.5.26.md  eureka-direction.md  training-findings-2026-05-13.md
docs/pokemon/: INDEX.md  README.md  TRAINING_RESULTS.md  VLM_DIRECTION.md
python/: benchmark_throughput.py  debug_gold_ram.py  demo_gold.py  evaluate.py  ghostlobby_gym.py  live_view.py  model_utils.py  save_gold_state.py  selfplay_gym.py  test_parallel.py  test_vlm_pokemon.py  train.py  train_curriculum.py  train_gold.py  train_selfplay.py  train_tactical.py  train_tactical_curriculum.py  watch.py
web/: index.html
web-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+242 files in other folders)
