[workspace]
members = ["crates/engine", "crates/telemetry", "crates/server", "crates/py"]
default-members = ["crates/engine", "crates/telemetry", "crates/server"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
bevy_ecs = "0.16"
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
thiserror = "2"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
rapier2d = { version = "0.22", features = ["simd-stable"] }
rapier3d = { version = "0.22", features = ["simd-stable"] }
