[package]
name = "ghostlobby-engine"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rapier2d = { workspace = true }
