[package]
name = "ghostlobby-telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
ghostlobby-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
